--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.7",
     "postgresql": "^0.0.1",
-    "prisma": "^5.20.0",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.20.0"
+  },
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon src/app.js"
   }
 }
