:sparkles: [Feat] : seed.js, package.json

--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "devDependencies": {
     "prisma": "^5.20.0"
   },
-  "type": "module",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
