--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "postgresql": "^0.0.1",
