♻ [Refactor] 알림 기능  수정, Script 수정

--- a/.github/workflows/challenge-scheduler.yml
+++ b/.github/workflows/challenge-scheduler.yml
@@ -17,7 +17,10 @@ jobs:
           node-version: '14'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
+      - name: Generate Prisma Client
+        run: npx prisma generate
 
       - name: Run challenge processing script
         env:
