--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@prisma/client": "^5.21.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
