🐛 [Fix] Swagger 배포환경 관련

--- a/vercel.json
+++ b/vercel.json
@@ -9,9 +9,17 @@
           "generate": "prisma generate"
         }
       }
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "src": "/api-docs/(.*)",
+      "dest": "/public/api-docs/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "src/app.js"
