--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,28 @@
 {
   "version": 2,
   "builds": [
-    { "src": "app.js", "use": "@vercel/node" },
-    { "src": "public/**", "use": "@vercel/static" }
+    {
+      "src": "src/app.js",
+      "use": "@vercel/node",
+      "config": {
+        "prisma": {
+          "generate": "prisma generate"
+        }
+      }
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "/api-docs/(.*)", "dest": "/public/api-docs/$1" },
-    { "src": "/favicon.ico", "dest": "/public/favicon.ico" },
-    { "src": "/(.*)", "dest": "/app.js" }
+    {
+      "src": "/api-docs/(.*)",
+      "dest": "/public/api-docs/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "src/app.js"
+    }
   ]
 }
