--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,11 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "src/app.js",
-      "use": "@vercel/node",
-      "config": {
-        "prisma": {
-          "generate": "prisma generate"
-        }
-      }
-    }
+    { "src": "src/app.js", "use": "@vercel/node" },
+    { "src": "public/**", "use": "@vercel/static" }
   ],
   "routes": [
-    {
-      "src": "/api-docs/(.*)",
-      "dest": "src/app.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "src/app.js"
-    }
+    { "src": "/api-docs/(.*)", "dest": "/public/api-docs/$1" },
+    { "src": "/(.*)", "dest": "src/app.js" }
   ]
 }
