--- a/vercel.json
+++ b/vercel.json
@@ -9,21 +9,12 @@
           "generate": "prisma generate"
         }
       }
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api-docs/(.*)",
-      "dest": "/public/api-docs/$1",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
-      }
+      "dest": "src/app.js"
     },
     {
       "src": "/(.*)",
