--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
+    "path": "^0.12.7",
     "postgresql": "^0.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "url": "^0.11.4",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
