--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "dev": "nodemon src/app.js",
-    "start": "node src/index.js",
+    "start": "node src/app.js",
     "build": "prisma generate",
     "vercel-build": "prisma generate && prisma migrate deploy",
     "seed": "prisma db seed"
